# module/swagger/mhub2/v1/query.swagger.json
@@ -1508,6 +1508,10 @@
           "items": {
             "type": "string"
           }
+        },
+        "outgoing_tx_timeout": {
+          "type": "string",
+          "format": "uint64"
         }
       },
       "description": "contract_hash:\nthe code hash of a known good version of the Gravity contract\nsolidity code. This can be used to verify the correct version\nof the contract has been deployed. This is a reference value for\ngoernance action only it is never read by any Gravity code\n\nbridge_ethereum_address:\nis address of the bridge contract on the Ethereum side, this is a\nreference value for governance only and is not actually used by any\nGravity code\n\nbridge_chain_id:\nthe unique identifier of the Ethereum chain, this is a reference value\nonly and is not actually used by any Gravity code\n\nThese reference values may be used by future Gravity client implemetnations\nto allow for saftey features or convenience features like the Gravity address\nin your relayer. A relayer would require a configured Gravity address if\ngovernance had not set the address on the chain it was relaying for.\n\nsigned_signer_set_txs_window\nsigned_batches_window\nsigned_ethereum_signatures_window\n\nThese values represent the time in blocks that a validator has to submit\na signature for a batch or valset, or to submit a ethereum_signature for a\nparticular attestation nonce. In the case of attestations this clock starts\nwhen the attestation is created, but only allows for slashing once the event\nhas passed\n\ntarget_eth_tx_timeout:\n\nThis is the 'target' value for when ethereum transactions time out, this is a target\nbecause Ethereum is a probabilistic chain and you can't say for sure what the\nblock frequency is ahead of time.\n\naverage_block_time\naverage_ethereum_block_time\n\nThese values are the average Cosmos block time and Ethereum block time\nrespectively and they are used to compute what the target batch timeout is. It\nis important that governance updates these in case of any major, prolonged\nchange in the time it takes to produce a block\n\nslash_fraction_signer_set_tx\nslash_fraction_batch\nslash_fraction_ethereum_signature\nslash_fraction_conflicting_ethereum_signature\n\nThe slashing fractions for the various gravity related slashing conditions.\nThe first three refer to not submitting a particular message, the third for\nsubmitting a different ethereum_signature for the same Ethereum event",
