# module/x/mhub2/types/genesis.pb.go
@@ -104,6 +104,7 @@ type Params struct {
 	SlashFractionConflictingEthereumSignature github_com_cosmos_cosmos_sdk_types.Dec `protobuf:"bytes,16,opt,name=slash_fraction_conflicting_ethereum_signature,json=slashFractionConflictingEthereumSignature,proto3,customtype=github.com/cosmos/cosmos-sdk/types.Dec" json:"slash_fraction_conflicting_ethereum_signature"`
 	UnbondSlashingSignerSetTxsWindow          uint64                                 `protobuf:"varint,17,opt,name=unbond_slashing_signer_set_txs_window,json=unbondSlashingSignerSetTxsWindow,proto3" json:"unbond_slashing_signer_set_txs_window,omitempty"`
 	Chains                                    []string                               `protobuf:"bytes,18,rep,name=chains,proto3" json:"chains,omitempty"`
+	OutgoingTxTimeout                         uint64                                 `protobuf:"varint,19,opt,name=outgoing_tx_timeout,json=outgoingTxTimeout,proto3" json:"outgoing_tx_timeout,omitempty"`
 }
 
 func (m *Params) Reset()         { *m = Params{} }
@@ -221,6 +222,13 @@ func (m *Params) GetChains() []string {
 		return m.Chains
 	}
 	return nil
+}
+
+func (m *Params) GetOutgoingTxTimeout() uint64 {
+	if m != nil {
+		return m.OutgoingTxTimeout
+	}
+	return 0
 }
 
 // GenesisState struct
@@ -395,67 +403,68 @@ func init() {
 func init() { proto.RegisterFile("mhub2/v1/genesis.proto", fileDescriptor_fae696fa24230542) }
 
 var fileDescriptor_fae696fa24230542 = []byte{
-	// 949 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x55, 0xdd, 0x6e, 0x1b, 0x45,
-	0x18, 0xb5, 0x9b, 0xd4, 0x71, 0xc6, 0x76, 0x13, 0xa6, 0x4e, 0xba, 0x71, 0x8b, 0xeb, 0x46, 0xa2,
-	0x32, 0x12, 0x5d, 0x37, 0x46, 0x80, 0xa8, 0xa0, 0xa2, 0x69, 0x0d, 0x04, 0x54, 0x8a, 0xd6, 0x16,
-	0x48, 0x08, 0x69, 0x3a, 0xde, 0xfd, 0xb2, 0xbb, 0x8a, 0x77, 0x26, 0xec, 0xcc, 0xba, 0xf6, 0x1d,
-	0x8f, 0xd0, 0x57, 0xe1, 0x2d, 0x7a, 0xd9, 0x4b, 0x54, 0xa1, 0x08, 0x25, 0xef, 0xc0, 0x35, 0x9a,
-	0x1f, 0xaf, 0xed, 0x24, 0xea, 0x45, 0xae, 0xec, 0xf9, 0xce, 0x39, 0xdf, 0x77, 0x76, 0x66, 0xe7,
-	0x2c, 0xda, 0x4e, 0xa2, 0x6c, 0xd8, 0xed, 0x8c, 0xf7, 0x3a, 0x21, 0x30, 0x10, 0xb1, 0x70, 0x8f,
-	0x53, 0x2e, 0x39, 0x2e, 0xeb, 0xba, 0x3b, 0xde, 0x6b, 0xd4, 0x43, 0x1e, 0x72, 0x5d, 0xec, 0xa8,
-	0x7f, 0x06, 0x6f, 0xd4, 0x73, 0x9d, 0x21, 0x9a, 0xea, 0xcd, 0x79, 0x55, 0x84, 0xb6, 0x55, 0x63,
-	0x27, 0xe4, 0x3c, 0x1c, 0x41, 0x47, 0xaf, 0x86, 0xd9, 0x61, 0x87, 0xb2, 0xa9, 0x81, 0x76, 0xdf,
-	0x95, 0x51, 0xe9, 0x67, 0x9a, 0xd2, 0x44, 0xe0, 0x0f, 0x11, 0x0a, 0x53, 0x3a, 0x8e, 0xe5, 0x94,
-	0xc4, 0x81, 0x53, 0x6c, 0x15, 0xdb, 0xeb, 0xde, 0xba, 0xad, 0x1c, 0x04, 0xf8, 0x21, 0xaa, 0xfb,
-	0x9c, 0xc9, 0x94, 0xfa, 0x92, 0x08, 0x9e, 0xa5, 0x3e, 0x90, 0x88, 0x8a, 0xc8, 0xb9, 0xa6, 0x89,
-	0x78, 0x86, 0xf5, 0x35, 0xf4, 0x3d, 0x15, 0x11, 0xfe, 0x1c, 0xdd, 0x1a, 0xa6, 0x71, 0x10, 0x02,
-	0x01, 0x19, 0x41, 0x0a, 0x59, 0x42, 0x68, 0x10, 0xa4, 0x20, 0x84, 0xb3, 0xaa, 0x45, 0x5b, 0x06,
-	0xee, 0x59, 0xf4, 0x89, 0x01, 0xf1, 0x7d, 0xb4, 0x61, 0x75, 0x7e, 0x44, 0x63, 0xa6, 0xdc, 0x5c,
-	0x6f, 0x15, 0xdb, 0xab, 0x5e, 0xcd, 0x94, 0x9f, 0xaa, 0xea, 0x41, 0x80, 0x1f, 0xa3, 0x3b, 0x22,
-	0x0e, 0x19, 0x04, 0x44, 0xff, 0xa4, 0x44, 0x80, 0x24, 0x72, 0x22, 0xc8, 0xab, 0x98, 0x05, 0xfc,
-	0x95, 0x53, 0xd2, 0x22, 0xc7, 0x70, 0xfa, 0x9a, 0xd2, 0x07, 0x39, 0x98, 0x88, 0x5f, 0x35, 0x8e,
-	0xbb, 0x68, 0xcb, 0xea, 0x87, 0x54, 0xfa, 0x11, 0xe4, 0xc2, 0x35, 0x2d, 0xbc, 0x69, 0xc0, 0x7d,
-	0x83, 0x59, 0xcd, 0x57, 0xa8, 0x91, 0x3f, 0x8c, 0xc2, 0xa9, 0xcc, 0xd2, 0xb9, 0xb0, 0x6c, 0x26,
-	0xce, 0x18, 0xfd, 0x9c, 0x60, 0xd5, 0x7b, 0x68, 0x4b, 0xd2, 0x34, 0x04, 0xa9, 0x76, 0x84, 0xc8,
-	0x09, 0x91, 0x71, 0x02, 0x3c, 0x93, 0x0e, 0xd2, 0x42, 0x6c, 0xc0, 0x9e, 0x8c, 0x06, 0x93, 0x81,
-	0x41, 0xf0, 0x27, 0x08, 0xd3, 0x31, 0xa4, 0x34, 0x04, 0x32, 0x1c, 0x71, 0xff, 0x48, 0x4b, 0x9c,
-	0x8a, 0xe6, 0x6f, 0x5a, 0x64, 0x5f, 0x01, 0x4a, 0x80, 0xbf, 0x46, 0xb7, 0x67, 0xec, 0xdc, 0xe6,
-	0x82, 0xac, 0x6a, 0xfc, 0x59, 0xca, 0x6c, 0xdf, 0xe7, 0x72, 0x86, 0xee, 0x88, 0x11, 0x15, 0x11,
-	0x39, 0x54, 0x47, 0x19, 0x73, 0xb6, 0xbc, 0xb3, 0x4e, 0xad, 0x55, 0x6c, 0x57, 0xf7, 0xdd, 0x37,
-	0x27, 0x77, 0x0b, 0xef, 0x4e, 0xee, 0xde, 0x0f, 0x63, 0x19, 0x65, 0x43, 0xd7, 0xe7, 0x49, 0xc7,
-	0xe7, 0x22, 0xe1, 0xc2, 0xfe, 0x3c, 0x10, 0xc1, 0x51, 0x47, 0x4e, 0x8f, 0x41, 0xb8, 0xcf, 0xc0,
-	0xf7, 0x1c, 0xdd, 0xf3, 0x5b, 0xdb, 0x72, 0xe1, 0x20, 0xf0, 0x4b, 0x54, 0x3f, 0x37, 0x4f, 0x9f,
-	0x84, 0x73, 0xe3, 0x4a, 0x73, 0xf0, 0xd2, 0x1c, 0x7d, 0x6e, 0x78, 0x8a, 0xee, 0x9d, 0x9b, 0x70,
-	0xf1, 0xf8, 0x9c, 0x8d, 0x2b, 0x8d, 0x6b, 0x2e, 0x8d, 0xeb, 0x9d, 0x3f, 0x73, 0xfc, 0xba, 0x88,
-	0x1e, 0x9c, 0x9b, 0xed, 0x73, 0x76, 0x38, 0x8a, 0x7d, 0x19, 0xb3, 0xf0, 0x32, 0x1f, 0x9b, 0x57,
-	0xf2, 0xf1, 0xf1, 0x92, 0x8f, 0xa7, 0xf3, 0x11, 0x17, 0x2d, 0xbd, 0x40, 0x1f, 0x65, 0x6c, 0xc8,
-	0x59, 0x40, 0xb4, 0x46, 0xd9, 0xb8, 0xfc, 0xea, 0x7c, 0xa0, 0x5f, 0x94, 0x96, 0x21, 0xf7, 0x2d,
-	0xf7, 0x92, 0x2b, 0xb4, 0x8d, 0x4a, 0xfa, 0x8e, 0x0a, 0x07, 0xb7, 0x56, 0xda, 0xeb, 0x9e, 0x5d,
-	0x3d, 0x5a, 0xfd, 0xf3, 0x9f, 0x56, 0x61, 0xf7, 0xaf, 0x22, 0xaa, 0x7e, 0x67, 0x42, 0xad, 0x2f,
-	0xa9, 0x04, 0xdc, 0x46, 0xa5, 0x63, 0x1d, 0x36, 0x3a, 0x5e, 0x2a, 0xdd, 0x4d, 0x77, 0x16, 0x72,
-	0xae, 0x09, 0x21, 0xcf, 0xe2, 0xf8, 0x1b, 0xb4, 0x01, 0x13, 0x09, 0x29, 0xa3, 0x23, 0x22, 0x94,
-	0x56, 0x38, 0xd7, 0x5b, 0x2b, 0xed, 0x4a, 0xf7, 0xd6, 0x5c, 0xd2, 0xb3, 0x04, 0xdd, 0xdb, 0xbb,
-	0x01, 0x8b, 0x4b, 0x81, 0x3f, 0x43, 0x15, 0xc9, 0x8f, 0x80, 0x91, 0x98, 0x1d, 0x72, 0xa1, 0xc3,
-	0xa0, 0xd2, 0xad, 0xcf, 0xd5, 0x03, 0x05, 0x1e, 0x28, 0xcc, 0x43, 0x32, 0xff, 0xbf, 0xfb, 0xdf,
-	0x0a, 0xaa, 0x2d, 0x35, 0xc6, 0x3b, 0xa8, 0x9c, 0xe7, 0x90, 0x49, 0xc5, 0x35, 0xdf, 0x26, 0xd0,
-	0x4b, 0x74, 0x3b, 0x77, 0x09, 0x63, 0x60, 0x92, 0x8c, 0xb9, 0x04, 0x92, 0x82, 0xcf, 0xd3, 0x40,
-	0x38, 0xd7, 0xb4, 0xe3, 0x7b, 0x17, 0x1d, 0xf7, 0x14, 0xf7, 0x17, 0x2e, 0xc1, 0xd3, 0x4c, 0xcf,
-	0x81, 0xcb, 0x01, 0x81, 0x1f, 0xa3, 0x5a, 0x00, 0x23, 0x08, 0xa9, 0x04, 0x72, 0x04, 0x53, 0xe1,
-	0xac, 0xe8, 0x9e, 0x3b, 0xf3, 0x9e, 0xcf, 0x45, 0xf8, 0xcc, 0x32, 0x7e, 0x84, 0xa9, 0xf0, 0xaa,
-	0xc1, 0xc2, 0x0a, 0xff, 0x8e, 0x9a, 0x19, 0x33, 0xf1, 0x16, 0x10, 0x01, 0x2c, 0x20, 0x92, 0x93,
-	0xdc, 0xb3, 0x9c, 0xa8, 0x28, 0x56, 0x0d, 0x9d, 0x79, 0xc3, 0x3e, 0xb0, 0x60, 0xc0, 0x67, 0x56,
-	0xbd, 0x46, 0xae, 0x5f, 0x06, 0x06, 0x13, 0x81, 0xbf, 0x44, 0x3b, 0x23, 0x2a, 0x24, 0xe1, 0x43,
-	0x01, 0xe9, 0x18, 0x02, 0xbb, 0x09, 0x8c, 0x33, 0x1f, 0x6c, 0x66, 0x6f, 0x2b, 0xc2, 0x0b, 0x8b,
-	0xeb, 0xc7, 0xfb, 0x49, 0xa1, 0xf8, 0x0b, 0x54, 0xe5, 0x99, 0x0c, 0xb9, 0x7a, 0x07, 0x95, 0x8d,
-	0x92, 0xb6, 0x51, 0x77, 0xcd, 0xa7, 0xca, 0x9d, 0x7d, 0xaa, 0xdc, 0x27, 0x6c, 0xea, 0x55, 0x66,
-	0x4c, 0x35, 0xf3, 0x11, 0xaa, 0xa9, 0x6b, 0x14, 0xa7, 0x09, 0x55, 0xef, 0xbb, 0x70, 0xd6, 0xde,
-	0xa3, 0x5c, 0xa6, 0xe2, 0x06, 0x2a, 0x0b, 0xf8, 0x23, 0x03, 0x65, 0xcf, 0x64, 0x75, 0xbe, 0xde,
-	0xff, 0xe1, 0xcd, 0x69, 0xb3, 0xf8, 0xf6, 0xb4, 0x59, 0xfc, 0xf7, 0xb4, 0x59, 0x7c, 0x7d, 0xd6,
-	0x2c, 0xbc, 0x3d, 0x6b, 0x16, 0xfe, 0x3e, 0x6b, 0x16, 0x7e, 0x7b, 0xb8, 0x70, 0x11, 0x9f, 0xc7,
-	0x4c, 0x42, 0x3a, 0x00, 0x9a, 0x98, 0xcf, 0x6e, 0x27, 0xe1, 0x41, 0x36, 0x82, 0xce, 0xc4, 0x2e,
-	0xf5, 0xb5, 0x1c, 0x96, 0xb4, 0x89, 0x4f, 0xff, 0x0f, 0x00, 0x00, 0xff, 0xff, 0x79, 0x1f, 0x55,
-	0x18, 0xdc, 0x07, 0x00, 0x00,
+	// 965 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x55, 0xcf, 0x6f, 0x1b, 0x45,
+	0x14, 0xb6, 0xeb, 0xd4, 0x49, 0xc6, 0x76, 0x93, 0x4e, 0x9c, 0x74, 0xe3, 0x16, 0xd7, 0x8d, 0x44,
+	0x65, 0x24, 0xba, 0x6e, 0x8c, 0x00, 0x51, 0x41, 0x45, 0xd3, 0x1a, 0x08, 0xa8, 0x14, 0xad, 0x2d,
+	0x90, 0x10, 0xd2, 0x74, 0xbc, 0xfb, 0xb2, 0xbb, 0x8a, 0x3d, 0x13, 0x76, 0x66, 0x5d, 0xfb, 0xc6,
+	0x99, 0x53, 0xff, 0x15, 0xfe, 0x8b, 0x1e, 0x7b, 0x44, 0x08, 0x55, 0x28, 0xf9, 0x1f, 0x38, 0xa3,
+	0xf9, 0xe1, 0x5d, 0x3b, 0x89, 0x38, 0xe4, 0xb4, 0x3b, 0xf3, 0x7d, 0xdf, 0x7b, 0xdf, 0xce, 0x9b,
+	0xf7, 0x16, 0xed, 0x8c, 0xa3, 0x74, 0xd8, 0xed, 0x4c, 0xf6, 0x3b, 0x21, 0x30, 0x10, 0xb1, 0x70,
+	0x4f, 0x12, 0x2e, 0x39, 0x5e, 0xd3, 0xfb, 0xee, 0x64, 0xbf, 0x51, 0x0f, 0x79, 0xc8, 0xf5, 0x66,
+	0x47, 0xbd, 0x19, 0xbc, 0x51, 0xcf, 0x74, 0x86, 0x68, 0x76, 0xb7, 0xf2, 0x5d, 0x11, 0xda, 0x50,
+	0x8d, 0xdd, 0x90, 0xf3, 0x70, 0x04, 0x1d, 0xbd, 0x1a, 0xa6, 0x47, 0x1d, 0xca, 0x66, 0x06, 0xda,
+	0xfb, 0x7d, 0x1d, 0x95, 0x7f, 0xa0, 0x09, 0x1d, 0x0b, 0xfc, 0x1e, 0x42, 0x61, 0x42, 0x27, 0xb1,
+	0x9c, 0x91, 0x38, 0x70, 0x8a, 0xad, 0x62, 0x7b, 0xdd, 0x5b, 0xb7, 0x3b, 0x87, 0x01, 0x7e, 0x88,
+	0xea, 0x3e, 0x67, 0x32, 0xa1, 0xbe, 0x24, 0x82, 0xa7, 0x89, 0x0f, 0x24, 0xa2, 0x22, 0x72, 0xae,
+	0x69, 0x22, 0x9e, 0x63, 0x7d, 0x0d, 0x7d, 0x43, 0x45, 0x84, 0x3f, 0x41, 0xb7, 0x86, 0x49, 0x1c,
+	0x84, 0x40, 0x40, 0x46, 0x90, 0x40, 0x3a, 0x26, 0x34, 0x08, 0x12, 0x10, 0xc2, 0x59, 0xd1, 0xa2,
+	0x6d, 0x03, 0xf7, 0x2c, 0xfa, 0xc4, 0x80, 0xf8, 0x3e, 0xda, 0xb0, 0x3a, 0x3f, 0xa2, 0x31, 0x53,
+	0x6e, 0xae, 0xb7, 0x8a, 0xed, 0x15, 0xaf, 0x66, 0xb6, 0x9f, 0xaa, 0xdd, 0xc3, 0x00, 0x3f, 0x46,
+	0x77, 0x44, 0x1c, 0x32, 0x08, 0x88, 0x7e, 0x24, 0x44, 0x80, 0x24, 0x72, 0x2a, 0xc8, 0xab, 0x98,
+	0x05, 0xfc, 0x95, 0x53, 0xd6, 0x22, 0xc7, 0x70, 0xfa, 0x9a, 0xd2, 0x07, 0x39, 0x98, 0x8a, 0x9f,
+	0x34, 0x8e, 0xbb, 0x68, 0xdb, 0xea, 0x87, 0x54, 0xfa, 0x11, 0x64, 0xc2, 0x55, 0x2d, 0xdc, 0x32,
+	0xe0, 0x81, 0xc1, 0xac, 0xe6, 0x73, 0xd4, 0xc8, 0x3e, 0x46, 0xe1, 0x54, 0xa6, 0x49, 0x2e, 0x5c,
+	0x33, 0x19, 0xe7, 0x8c, 0x7e, 0x46, 0xb0, 0xea, 0x7d, 0xb4, 0x2d, 0x69, 0x12, 0x82, 0x54, 0x27,
+	0x42, 0xe4, 0x94, 0xc8, 0x78, 0x0c, 0x3c, 0x95, 0x0e, 0xd2, 0x42, 0x6c, 0xc0, 0x9e, 0x8c, 0x06,
+	0xd3, 0x81, 0x41, 0xf0, 0x87, 0x08, 0xd3, 0x09, 0x24, 0x34, 0x04, 0x32, 0x1c, 0x71, 0xff, 0x58,
+	0x4b, 0x9c, 0x8a, 0xe6, 0x6f, 0x5a, 0xe4, 0x40, 0x01, 0x4a, 0x80, 0xbf, 0x40, 0xb7, 0xe7, 0xec,
+	0xcc, 0xe6, 0x82, 0xac, 0x6a, 0xfc, 0x59, 0xca, 0xfc, 0xdc, 0x73, 0x39, 0x43, 0x77, 0xc4, 0x88,
+	0x8a, 0x88, 0x1c, 0xa9, 0x52, 0xc6, 0x9c, 0x2d, 0x9f, 0xac, 0x53, 0x6b, 0x15, 0xdb, 0xd5, 0x03,
+	0xf7, 0xcd, 0xbb, 0xbb, 0x85, 0xbf, 0xde, 0xdd, 0xbd, 0x1f, 0xc6, 0x32, 0x4a, 0x87, 0xae, 0xcf,
+	0xc7, 0x1d, 0x9f, 0x8b, 0x31, 0x17, 0xf6, 0xf1, 0x40, 0x04, 0xc7, 0x1d, 0x39, 0x3b, 0x01, 0xe1,
+	0x3e, 0x03, 0xdf, 0x73, 0x74, 0xcc, 0xaf, 0x6c, 0xc8, 0x85, 0x42, 0xe0, 0x97, 0xa8, 0x7e, 0x2e,
+	0x9f, 0xae, 0x84, 0x73, 0xe3, 0x4a, 0x79, 0xf0, 0x52, 0x1e, 0x5d, 0x37, 0x3c, 0x43, 0xf7, 0xce,
+	0x65, 0xb8, 0x58, 0x3e, 0x67, 0xe3, 0x4a, 0xe9, 0x9a, 0x4b, 0xe9, 0x7a, 0xe7, 0x6b, 0x8e, 0x5f,
+	0x17, 0xd1, 0x83, 0x73, 0xb9, 0x7d, 0xce, 0x8e, 0x46, 0xb1, 0x2f, 0x63, 0x16, 0x5e, 0xe6, 0x63,
+	0xf3, 0x4a, 0x3e, 0x3e, 0x58, 0xf2, 0xf1, 0x34, 0x4f, 0x71, 0xd1, 0xd2, 0x0b, 0xf4, 0x7e, 0xca,
+	0x86, 0x9c, 0x05, 0x44, 0x6b, 0x94, 0x8d, 0xcb, 0x5b, 0xe7, 0xa6, 0xbe, 0x28, 0x2d, 0x43, 0xee,
+	0x5b, 0xee, 0x25, 0x2d, 0xb4, 0x83, 0xca, 0xba, 0x47, 0x85, 0x83, 0x5b, 0xa5, 0xf6, 0xba, 0x67,
+	0x57, 0xd8, 0x45, 0x5b, 0x3c, 0x95, 0x21, 0x57, 0x19, 0x16, 0xae, 0xf9, 0x96, 0x0e, 0x7b, 0x73,
+	0x0e, 0x65, 0xb7, 0xfc, 0xd1, 0xca, 0x6f, 0x7f, 0xb7, 0x0a, 0x7b, 0x7f, 0x14, 0x51, 0xf5, 0x6b,
+	0x33, 0x04, 0xfb, 0x92, 0x4a, 0xc0, 0x6d, 0x54, 0x3e, 0xd1, 0xc3, 0x49, 0x8f, 0xa3, 0x4a, 0x77,
+	0xd3, 0x9d, 0x0f, 0x45, 0xd7, 0x0c, 0x2d, 0xcf, 0xe2, 0xf8, 0x4b, 0xb4, 0x01, 0x53, 0x09, 0x09,
+	0xa3, 0x23, 0x22, 0x94, 0x56, 0x38, 0xd7, 0x5b, 0xa5, 0x76, 0xa5, 0x7b, 0x2b, 0x97, 0xf4, 0x2c,
+	0x41, 0xc7, 0xf6, 0x6e, 0xc0, 0xe2, 0x52, 0xe0, 0x8f, 0x51, 0x45, 0xf2, 0x63, 0x60, 0x24, 0x66,
+	0x47, 0x5c, 0xe8, 0xe1, 0x51, 0xe9, 0xd6, 0x73, 0xf5, 0x40, 0x81, 0x87, 0x0a, 0xf3, 0x90, 0xcc,
+	0xde, 0xf7, 0xfe, 0x2d, 0xa1, 0xda, 0x52, 0x60, 0xbc, 0x8b, 0xd6, 0xb2, 0xb9, 0x65, 0xa6, 0xe8,
+	0xaa, 0x6f, 0x27, 0xd6, 0x4b, 0x74, 0x3b, 0x73, 0x09, 0x13, 0x60, 0x92, 0x4c, 0xb8, 0x04, 0x92,
+	0x80, 0xcf, 0x93, 0x40, 0x38, 0xd7, 0xb4, 0xe3, 0x7b, 0x17, 0x1d, 0xf7, 0x14, 0xf7, 0x47, 0x2e,
+	0xc1, 0xd3, 0x4c, 0xcf, 0x81, 0xcb, 0x01, 0x81, 0x1f, 0xa3, 0x5a, 0x00, 0x23, 0x08, 0xa9, 0x04,
+	0x72, 0x0c, 0x33, 0xe1, 0x94, 0x74, 0xcc, 0xdd, 0x3c, 0xe6, 0x73, 0x11, 0x3e, 0xb3, 0x8c, 0xef,
+	0x60, 0x26, 0xbc, 0x6a, 0xb0, 0xb0, 0xc2, 0xbf, 0xa0, 0x66, 0xca, 0xcc, 0x38, 0x0c, 0x88, 0x00,
+	0x16, 0x10, 0xc9, 0x49, 0xe6, 0x59, 0x4e, 0xd5, 0xe8, 0x56, 0x01, 0x9d, 0x3c, 0x60, 0x1f, 0x58,
+	0x30, 0xe0, 0x73, 0xab, 0x5e, 0x23, 0xd3, 0x2f, 0x03, 0x83, 0xa9, 0xc0, 0x9f, 0xa1, 0xdd, 0x11,
+	0x15, 0x92, 0xf0, 0xa1, 0x80, 0x64, 0x02, 0x81, 0x3d, 0x04, 0xc6, 0x99, 0x0f, 0x76, 0xc6, 0xef,
+	0x28, 0xc2, 0x0b, 0x8b, 0xeb, 0xcf, 0xfb, 0x5e, 0xa1, 0xf8, 0x53, 0x54, 0x5d, 0xb8, 0x51, 0xaa,
+	0x3e, 0x25, 0x5d, 0x1f, 0xf3, 0x6b, 0x73, 0xe7, 0xbf, 0x36, 0xf7, 0x09, 0x9b, 0x79, 0x95, 0xfc,
+	0x82, 0x09, 0xfc, 0x08, 0xd5, 0x54, 0xdb, 0xc5, 0xc9, 0x98, 0xaa, 0xfe, 0x10, 0xce, 0xea, 0xff,
+	0x28, 0x97, 0xa9, 0xb8, 0x81, 0xd6, 0x04, 0xfc, 0x9a, 0x82, 0xb2, 0x67, 0x66, 0x7b, 0xb6, 0x3e,
+	0xf8, 0xf6, 0xcd, 0x69, 0xb3, 0xf8, 0xf6, 0xb4, 0x59, 0xfc, 0xe7, 0xb4, 0x59, 0x7c, 0x7d, 0xd6,
+	0x2c, 0xbc, 0x3d, 0x6b, 0x16, 0xfe, 0x3c, 0x6b, 0x16, 0x7e, 0x7e, 0xb8, 0xd0, 0xb8, 0xcf, 0x63,
+	0x26, 0x21, 0x19, 0x00, 0x1d, 0x9b, 0xdf, 0x74, 0x67, 0xcc, 0x83, 0x74, 0x04, 0x9d, 0xa9, 0x5d,
+	0xea, 0x36, 0x1e, 0x96, 0xb5, 0x89, 0x8f, 0xfe, 0x0b, 0x00, 0x00, 0xff, 0xff, 0x41, 0xba, 0xe3,
+	0x96, 0x0c, 0x08, 0x00, 0x00,
 }
 
 func (m *Params) Marshal() (dAtA []byte, err error) {
@@ -478,6 +487,13 @@ func (m *Params) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
+	if m.OutgoingTxTimeout != 0 {
+		i = encodeVarintGenesis(dAtA, i, uint64(m.OutgoingTxTimeout))
+		i--
+		dAtA[i] = 0x1
+		i--
+		dAtA[i] = 0x98
+	}
 	if len(m.Chains) > 0 {
 		for iNdEx := len(m.Chains) - 1; iNdEx >= 0; iNdEx-- {
 			i -= len(m.Chains[iNdEx])
@@ -834,6 +850,9 @@ func (m *Params) Size() (n int) {
 			l = len(s)
 			n += 2 + l + sovGenesis(uint64(l))
 		}
+	}
+	if m.OutgoingTxTimeout != 0 {
+		n += 2 + sovGenesis(uint64(m.OutgoingTxTimeout))
 	}
 	return n
 }
@@ -1357,6 +1376,25 @@ func (m *Params) Unmarshal(dAtA []byte) error {
 			}
 			m.Chains = append(m.Chains, string(dAtA[iNdEx:postIndex]))
 			iNdEx = postIndex
+		case 19:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field OutgoingTxTimeout", wireType)
+			}
+			m.OutgoingTxTimeout = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowGenesis
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.OutgoingTxTimeout |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
 		default:
 			iNdEx = preIndex
 			skippy, err := skipGenesis(dAtA[iNdEx:])
